--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "lodash": "^4.17.21",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.2",
     "reflect-metadata": "^0.1.13",
